--- a/lettersearch.html
+++ b/lettersearch.html
@@ -82,18 +82,23 @@
 
 
 .mark {
-	display:inline-block;
-	font-size: 40pt;
+	display:block;
+	/*font-size: 40pt;*/
 	position:absolute;
-	width: 1.25em;
-	height: 1.25em;
-	line-height: 1.25em;
+	width: min(5vw,10vh,1.25em);
+	height: min(5vw,10vh,1.25em);
+	line-height: min(5vw,10vh,1.25em);
 	text-align: center;
-	
+	border-radius: 0.35em;
+	/*background:#33a3;*/
 	&::after {
 		content: attr(data-mark);
 		position:relative;
-		
+		display:block;
+	}
+	
+	&.clicked {
+		background:var(--highlight);
 	}
 }
 
@@ -193,6 +198,8 @@ function showchart() {
 	sac.innerHTML = "";
 	let placedmarks = [];
 
+	let clickedmark;
+	
 	let parttwo;
 	if (chosen.length ==1) chosen.push(chosen[0]);
 	for (let choice of chosen) {
@@ -203,7 +210,7 @@ function showchart() {
 			m.dataset.mark = mark;
 			if (parttwo) m.classList.add("mk_parttwo");
 			sac.append(m);
-
+			m.onclick = checkmatch;
 			placerandom(m);
 		}
 		parttwo = true;
@@ -230,13 +237,36 @@ function showchart() {
 					return;
 				}
 				m.style.background="#f003";
+				console.log("overlap",m.dataset.mark);
 			}
 		}
 		placedmarks.push({left:b.left,right:b.right,top:b.top,bottom:b.bottom});
 	}
+	
+	
+	function checkmatch(e) {
+	console.log(e.target, this);
+	if (!clickedmark) {
+		clickedmark = this; 
+		this.classList.add("clicked");
+	} else if (clickedmark == this) {
+		clickedmark.classList.remove("clicked");
+		clickedmark = null;	
+	} else if (clickedmark.dataset.mark == this.dataset.mark) {
+		clickedmark.remove();
+		this.remove();
+		clickedmark = null;
+	}
+
+	
+	}
+
+
+
 }
 
 showchart();
+
 
 let m = document.querySelector(".mark");
 
