red/blue default

--- a/lettersearch.html
+++ b/lettersearch.html
@@ -59,7 +59,7 @@
 		position:relative;
 		display:block;
 		font-size:80%;
-		scale:var(--mk_scale);
+		scale:var(--mk_scale)
 	}
 	
 	&.clicked {
@@ -132,8 +132,8 @@
 	
 	<h3>Colors</h3>
 	<div id="mk_colors">
-	<input type="checkbox" id="mk_red"><label for="mk_red">Red</label><br/>
-	<input type="checkbox" id="mk_green"><label for="mk_green">Blue</label><br/>
+	<input type="checkbox" checked id="mk_red"><label for="mk_red">Red</label><br/>
+	<input type="checkbox" checked id="mk_green"><label for="mk_green">Blue</label><br/>
 	
 	</div>
 
