add Letter  Search

--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@ Contents:
       <li><a href="#slaptap">Slap Tap</a> (printable)</li>
       <li><a href="#fistbump">Closed, Open, Flat</a> (printable)</li>
       <li><a href="#colortouch">Color Touch</a> (printable)</li>
+			<li><a href="#lettersearch">Letter Search</a></li>
     </ul>
 
     <hr />
@@ -305,6 +306,25 @@ Contents:
         <li>Printable chart! Layout will be optimized when printing.</li>
       </ul>
     </div>
+		
+    <h3 id="lettersearch"><a href="lettersearch.html">Letter Search</a></h3>
+<ul>
+<li>Wear your red/green glasses as guided by your vision therapist.</li>
+<li>Select the matching letters in alphabetical order.</li>
+<li>If any letters appear to fade or disappear, try any anti-supperssion techniques that help you to engage both eyes.</li>
+<li>Discontinue this activity/ if you experience consistent double vision and are unable to resolve this as you play.</li>
+</ul>
+<b>Monocular Fixation in Binocular Field</b>
+<ul>
+<li>Use the Settings panel to pick a desired color.</li>
+<li>While both eyes will see the screen, only one eye will see the letters.</li>
+<li>Select matching letters in alphabetical order.</li>
+</ul>
+<b>Alternate Markers</b>
+<ul>
+<li>Use the Settings panel to select the desired character set.</li>
+<li>If the number set is paired with an alphabet set, pair the number corresponding to the letter (A=1, B=2, etc).</li>
+</ul>
     <hr />
     <br />
     <br />
