clean up red/green colors

--- a/lettersearch.html
+++ b/lettersearch.html
@@ -32,18 +32,6 @@
       font-family: sans-serif;
     }
 
-
-    [data-theme="light"] {
-      --tranagreen: #11eeee;
-      --tranared: #eebb11;
-    }
-
-    [data-theme="dark"] {
-      --tranagreen: #008;
-      --tranared: #500;
-    }
-
-
     .mark {
       display: block;
       position: absolute;
@@ -132,8 +120,8 @@
 
       <h3>Colors</h3>
       <div id="mk_colors">
-        <input type="checkbox" checked id="mk_red"><label for="mk_red">Red</label><br />
-        <input type="checkbox" checked id="mk_green"><label for="mk_green">Blue</label><br />
+        <input type="checkbox" checked id="mk_red"><label for="mk_red">Red filter</label><br />
+        <input type="checkbox" checked id="mk_green"><label for="mk_green">Green filter</label><br />
 
       </div>
 
